--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>2.9.6</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
     </dependencies>
 </project>
 
